# 24b-emb-projeto-dale

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  lwipopts.h  main.c
python/: mqtt_server.py  teste.py
